# developer-tools

./: .env.example  .gitignore  .pylintrc  CHANGELOG.md  LICENSE  README.md  logging.conf  logging_dev.conf  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: Janitor.agent.md  Librarian.agent.md  QAEngineer.agent.md  Researcher.agent.md
.github/workflows/: build.yml  lint.yml  python-package.yml  test-and-publish.yml  test.yml  version.yml
New stuff/: codemap_generator.py
New stuff/md_link_checker/: __init__.py  __main__.py  cli.py
docs/ai-context/: planning-instructions.md
docs/development-notes/: new-tools-integration-plan.md  package-review-fixes-plan.md
docs/research/: design-patterns.md  index.md  packaging.md  python-libraries.md  testing.md
src/dev_tools/: __init__.py  cli_help.py  custom_decorators.py  custom_handlers.py  debug_tools.py  logger_settings.py  progress_bar.py
src/dev_tools/codemap_generator/: __init__.py  __main__.py  generator.py
src/dev_tools/md_link_checker/: __init__.py  __main__.py  cli.py  scanner.py
src/tests/: test_cli_help.py  test_codemap_generator.py  test_custom_decorators.py  test_custom_handlers.py  test_debug_tools.py  test_logger_settings.py  test_md_link_checker.py  test_progress_bar.py
