[build-system]
requires = [ "setuptools>=42", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "bosos-dev-tools"
version = "1.0.3"
description = "Dev Tools is a collection of utility tools for Python developers — logging, decorators, debugging, progress bars, a markdown link checker, and an AST-based code map generator."
readme = "README.md"
keywords = [ "development", "tools", "logging", "decorators",]
classifiers = [ "Development Status :: 5 - Production/Stable", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: 3.14", "Intended Audience :: Developers", "Topic :: Software Development :: Build Tools", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
requires-python = ">=3.10"
dependencies = [ "python-dotenv",]
[[project.authors]]
name = "Björn Gunnarsson"
email = "bosos3@hotmail.com"

[project.license]
file = "LICENSE"

[project.optional-dependencies]
test = [ "pytest", "pytest-cov",]
lint = [ "pylint",]

[project.scripts]
dev-tools = "dev_tools.cli_help:main"
md-link-checker = "dev_tools.md_link_checker.cli:main"
codemap-generator = "dev_tools.codemap_generator:main"

[project.urls]
Homepage = "https://github.com/bjorngun/developer-tools"
Source = "https://github.com/bjorngun/developer-tools"
Tracker = "https://github.com/bjorngun/developer-tools/issues"

[tool.pytest.ini_options]
testpaths = [ "src/tests",]
pythonpath = [ "src",]

[tool.setuptools.package-data]
dev_tools = [ "py.typed",]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [ "src",]
